Vector Sort is mostly working. Saves the number first, but all loops after store the address.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
                 "C:\\msys64\\msys2_shell.cmd -defterm -here -no-start -ucrt64"
             ]
         }
-    }
+    },
+    "C_Cpp.default.compilerPath": "c:\\msys64_2\\ucrt64\\bin\\gcc.exe"
 }
