--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
             ]
         }
     },
-    "C_Cpp.default.compilerPath": "c:\\msys64_2\\ucrt64\\bin\\gcc.exe"
+    "C_Cpp.default.compilerPath": "C:/msys64/ucrt64/bin/gcc.exe"
 }
